examples/bad/wrong_func_type_decl_1.ez
f : Integer -> Bool;
f x = x + 1;

main : Integer;
main = f 0;
